package edu.uees.patrones.factory;

public interface Notificador {
    void enviar(String destino, String mensaje);
}
